--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">ltdd_18042022</string>
+    <string name="sign_in">sign in</string>
+    <string name="email">Email</string>
+    <string name="type_password">Type password</string>
+    <string name="forgot_password">FORGOT PASSWORD?</string>
+    <string name="sign_in_with_google">sign in with google</string>
+    <string name="do_not_have_an_account">Do not have an account?</string>
+    <string name="register_here">Register here</string>
+    <string name="your_name">Your name</string>
+    <string name="create_new_account">CREATE NEW ACCOUNT</string>
+    <string name="todo">TODO</string>
 </resources>
